// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoryCard Renders correctly when successRateDiff is negative 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main repositoryCard buildStatus"
  >
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--color StyledProps--color-black"
      style="--text-line-clamp: 1;"
    >
      Pipeline 1
    </p>
    <div
      class="StyledProps--font StyledProps--main mainContent"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main cardStats"
        >
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            BUILDS
          </p>
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            PIPELINE.DASHBOARDS.SUCCESSRATE
          </p>
          <p
            class="StyledProps--font StyledProps--main statContent"
          >
            30
          </p>
          <div
            class="StyledProps--font StyledProps--main statWrap"
          >
            <p
              class="StyledProps--font StyledProps--main statContent"
            >
              60
              %
            </p>
            <span
              class="bp3-icon bp3-icon-caret-down StyledProps--main"
              icon="caret-down"
            >
              <svg
                data-icon="caret-down"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  caret-down
                </desc>
                <path
                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main rateDiffValue"
            >
              5
              %
            </p>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main chartWrapper StyledProps--margin-left-medium"
        style="height: 40px;"
      >
        <div />
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main cardFooter"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main avatarWrapper"
      >
        <div
          class="wrapper"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="userLabel userLabel"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-user StyledProps--main StyledProps--color StyledProps--color-grey900"
                  icon="user"
                >
                  <svg
                    data-icon="user"
                    height="18"
                    viewBox="0 0 16 16"
                    width="18"
                  >
                    <desc>
                      user
                    </desc>
                    <path
                      d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny"
                  style="--text-line-clamp: 1;"
                >
                  John Doe
                </p>
              </div>
            </span>
          </span>
        </div>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main message StyledProps--font-variation-tiny"
          style="--text-line-clamp: 2;"
        >
          This is message
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main times StyledProps--flex StyledProps--flex-justifyContent-end"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
        >
          <span
            class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--color StyledProps--color-grey900"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny"
            style="--text-line-clamp: 1;"
          >
            SOME_FIXED_TIME
          </p>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
        >
          <span
            class="bp3-icon bp3-icon-time StyledProps--main StyledProps--color StyledProps--color-grey900"
            icon="time"
          >
            <svg
              data-icon="time"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                time
              </desc>
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny"
          >
            60m
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RepositoryCard Renders correctly when successRateDiff is positive 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main repositoryCard buildStatus"
  >
    <p
      class="StyledProps--font Text--lineclamp StyledProps--main title StyledProps--color StyledProps--color-black"
      style="--text-line-clamp: 1;"
    >
      Pipeline 1
    </p>
    <div
      class="StyledProps--font StyledProps--main mainContent"
    >
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main cardStats"
        >
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            BUILDS
          </p>
          <p
            class="StyledProps--font StyledProps--main statHeader StyledProps--font-size-small"
          >
            PIPELINE.DASHBOARDS.SUCCESSRATE
          </p>
          <p
            class="StyledProps--font StyledProps--main statContent"
          >
            30
          </p>
          <div
            class="StyledProps--font StyledProps--main statWrap"
          >
            <p
              class="StyledProps--font StyledProps--main statContent"
            >
              60
              %
            </p>
            <span
              class="bp3-icon bp3-icon-caret-up StyledProps--main"
              icon="caret-up"
            >
              <svg
                data-icon="caret-up"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  caret-up
                </desc>
                <path
                  d="M11.87 9.17s.01 0 0 0l-3.5-4C8.28 5.07 8.15 5 8 5s-.28.07-.37.17l-3.5 4a.495.495 0 00.37.83h7a.495.495 0 00.37-.83z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font StyledProps--main rateDiffValue"
            >
              10
              %
            </p>
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main chartWrapper StyledProps--margin-left-medium"
        style="height: 40px;"
      >
        <div />
      </div>
    </div>
    <div
      class="Layout--horizontal Layout--layout-spacing-small StyledProps--main cardFooter"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main avatarWrapper"
      >
        <div
          class="wrapper"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="userLabel userLabel"
                tabindex="0"
              >
                <span
                  class="bp3-icon bp3-icon-user StyledProps--main StyledProps--color StyledProps--color-grey900"
                  icon="user"
                >
                  <svg
                    data-icon="user"
                    height="18"
                    viewBox="0 0 16 16"
                    width="18"
                  >
                    <desc>
                      user
                    </desc>
                    <path
                      d="M7.99-.01A7.998 7.998 0 00.03 8.77c.01.09.03.18.04.28.02.15.04.31.07.47.02.11.05.22.08.34.03.13.06.26.1.38.04.12.08.25.12.37.04.11.08.21.12.32a6.583 6.583 0 00.3.65c.07.14.14.27.22.4.04.07.08.13.12.2l.27.42.1.13a7.973 7.973 0 003.83 2.82c.03.01.05.02.07.03.37.12.75.22 1.14.29l.2.03c.39.06.79.1 1.2.1s.81-.04 1.2-.1l.2-.03c.39-.07.77-.16 1.14-.29.03-.01.05-.02.07-.03a8.037 8.037 0 003.83-2.82c.03-.04.06-.08.09-.13.1-.14.19-.28.28-.42.04-.07.08-.13.12-.2.08-.13.15-.27.22-.41.04-.08.08-.17.12-.26.06-.13.11-.26.17-.39.04-.1.08-.21.12-.32.04-.12.08-.24.12-.37.04-.13.07-.25.1-.38.03-.11.06-.22.08-.34.03-.16.05-.31.07-.47.01-.09.03-.18.04-.28.02-.26.04-.51.04-.78-.03-4.41-3.61-7.99-8.03-7.99zm0 14.4c-1.98 0-3.75-.9-4.92-2.31.67-.36 1.49-.66 2.14-.95 1.16-.52 1.04-.84 1.08-1.27.01-.06.01-.11.01-.17-.41-.36-.74-.86-.96-1.44v-.01c0-.01-.01-.02-.01-.02-.05-.13-.09-.26-.12-.39-.28-.05-.44-.35-.5-.63-.06-.11-.18-.38-.15-.69.04-.41.2-.59.38-.67v-.06c0-.51.05-1.24.14-1.72.02-.13.05-.26.09-.39.17-.59.53-1.12 1.01-1.49.49-.38 1.19-.59 1.82-.59.62 0 1.32.2 1.82.59.48.37.84.9 1.01 1.49.04.13.07.26.09.4.09.48.14 1.21.14 1.72v.07c.18.08.33.26.37.66.03.31-.1.58-.16.69-.06.27-.21.57-.48.62-.03.13-.07.26-.12.38 0 .01-.01.04-.01.04-.21.57-.54 1.06-.94 1.42 0 .06.01.13.01.19.04.43-.12.75 1.05 1.27.65.29 1.47.6 2.14.95a6.415 6.415 0 01-4.93 2.31z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny"
                  style="--text-line-clamp: 1;"
                >
                  John Doe
                </p>
              </div>
            </span>
          </span>
        </div>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main message StyledProps--font-variation-tiny"
          style="--text-line-clamp: 2;"
        >
          This is message
        </p>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main times StyledProps--flex StyledProps--flex-justifyContent-end"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
        >
          <span
            class="bp3-icon bp3-icon-calendar StyledProps--main StyledProps--color StyledProps--color-grey900"
            icon="calendar"
          >
            <svg
              data-icon="calendar"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                calendar
              </desc>
              <path
                d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-tiny"
            style="--text-line-clamp: 1;"
          >
            SOME_FIXED_TIME
          </p>
        </div>
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main StyledProps--flex"
        >
          <span
            class="bp3-icon bp3-icon-time StyledProps--main StyledProps--color StyledProps--color-grey900"
            icon="time"
          >
            <svg
              data-icon="time"
              height="10"
              viewBox="0 0 16 16"
              width="10"
            >
              <desc>
                time
              </desc>
              <path
                d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny"
          >
            60m
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
